# xdg-desktop-portal-termfilepickers

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
data/: save_file_template.txt  termfilepickers.portal
data/share/wrappers/: yazi-open-file.nu  yazi-save-file.nu
data/test/: open-file-input.json  save-file-input.json
nix/: module.nix
src/: config.rs  file_chooser.rs  main.rs  runner.rs  state.rs
