[package]
name = "xdg-desktop-portal-termfilepickers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4.22"
nix = "0.29.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.4.0"
zbus = "4.4.0"
